syntax="proto3";

package services;
option go_package="../services";

// User模型
message UserInfo {
    int32 user_id=1;
    int32 user_score=2;
}

message UserScoreRequest {
    repeated UserInfo users=1;
}

message UserScoreResponse{
    repeated UserInfo users=1;
}

service UserService{
    // rpc GetUserScore(UserScoreRequest) returns (UserScoreResponse);
    // rpc GetUserScoreByServerSteam(UserScoreRequest) returns (stream UserScoreResponse);
    // rpc GetUserScoreByClientSteam(stream UserScoreRequest) returns (UserScoreResponse);
    
    // client and server stream 
    rpc GetUserScoreByCSSteam(stream UserScoreRequest) returns (stream UserScoreResponse);
}